--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar no-select">
 
         <div class="navbar__left">
-            <p><a href="/">Ime Priimek</a></p>
+            <p><a href="/">Miha Knific</a></p>
         </div>
 
         <div class="navbar__right">
