--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </section>
 
     <section class="divider no-select">
-        <div class="title-animation">
+        <div class="project__description-title-animation">
             <h2>
                 Project descriptions
             </h2>
@@ -256,13 +256,12 @@
 
 
     <section id="contactAnchor" class="divider contact-divider">
-        <div class="title-animation">
+        <div class="contact-divider-title">
             <h2>
                 Let's get in touch!
             </h2>
 
         </div>
-
     </section>
 
     <section class="later">
@@ -284,6 +283,7 @@
     <script src="js/headerTypewriter.js"></script>
     <script src="js/smoothScroll.js"></script>
     <script src="js/titleAnimation.js"></script>
+    <script src="js/slideIn.js"></script>
     <script src="js/scrambleText.js"></script>
     <script src="js/realTime.js"></script>
 
