--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/title-animation.css" rel="stylesheet" type="text/css" />
     <link href="css/dot-patter-container.css" rel="stylesheet" type="text/css" />
     <link href="css/hover-shape-container.css" rel="stylesheet" type="text/css" />
+    <link href="css/rainbow-btn.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <div class="navbar__right">
             <p onclick="smoothScroll('myProjectsAnchor')">Projects</p>
             <p onclick="smoothScroll('contactAnchor')">Contact</p>
-            
+
         </div>
 
     </nav>
@@ -134,7 +135,7 @@
     <section id="project__description__section-01" class="project__description__section">
 
         <div class="project__description__section-text__container">
-            <div class="background-number">01</div>
+            <div class="background-number no-select">01</div>
             <div class="front-text">
                 <h3> Explore the Art of Web Design with Our CSS Backgrounds Project </h3>
                 <p> Are you a fan of web design? Do you want to explore the power of CSS in creating stunning
@@ -147,6 +148,16 @@
                     formatting of a document written in HTML or XML. It is a cornerstone technology of the World Wide
                     Web, alongside HTML and JavaScript. </p>
             </div>
+
+            <a href="goetzeiscool.github.io">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
         </div>
 
         <div class="project__description__section-img project__description__section-img__01"></div>
@@ -157,7 +168,7 @@
     <section id="project__description__section-02" class="project__description__section">
 
         <div class="project__description__section-text__container">
-            <div class="background-number">02</div>
+            <div class="background-number no-select">02</div>
             <div class="front-text">
                 <h3> Discover the Power of CSS with Our CSS Shapes Project </h3>
                 <p> Do you want to learn how to create different shapes using CSS?</p>
@@ -168,6 +179,16 @@
                     inspirational, providing a modern and interactive learning experience. Visit this site and start
                     your journey into the world of CSS shapes. </p>
             </div>
+
+            <a href="goetzeiscool.github.io">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
         </div>
 
         <div class="project__description__section-img project__description__section-img__02"></div>
@@ -177,7 +198,7 @@
     <section id="project__description__section-03" class="project__description__section">
 
         <div class="project__description__section-text__container">
-            <div class="background-number">03</div>
+            <div class="background-number no-select">03</div>
             <div class="front-text">
                 <h3>
                     Discover the Beauty of Poetry with Our Prešeren Poetry Project
@@ -209,6 +230,16 @@
                     Zdravljica (A Toast).
                 </p>
             </div>
+
+            <a href="goetzeiscool.github.io">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
         </div>
 
         <div class="project__description__section-img project__description__section-img__03"></div>
@@ -218,7 +249,7 @@
     <section id="project__description__section-04" class="project__description__section">
 
         <div class="project__description__section-text__container">
-            <div class="background-number">04</div>
+            <div class="background-number no-select">04</div>
             <div class="front-text">
                 <h3> Transform Your Text with Our Text Transformation Tool </h3>
                 <p> Need to transform your text quickly and efficiently? </p>
@@ -228,6 +259,16 @@
                     efficient, making text transformation a breeze. Visit this site and transform your text in no time.
                 </p>
             </div>
+
+            <a href="goetzeiscool.github.io">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
         </div>
 
         <div class="project__description__section-img project__description__section-img__04"></div>
@@ -237,7 +278,7 @@
     <section id="project__description__section-05" class="project__description__section">
 
         <div class="project__description__section-text__container">
-            <div class="background-number">05</div>
+            <div class="background-number no-select">05</div>
             <div class="front-text">
                 <h3> Keep Track of Time with Our Web Clock Online </h3>
                 <p> Want to have a stylish and accurate clock on your desktop? </p>
@@ -246,6 +287,16 @@
                     time. The clock is designed using modern web technologies, providing a sleek and responsive
                     interface. Visit this site and always stay on time.</p>
             </div>
+
+            <a href="goetzeiscool.github.io">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
         </div>
 
         <div class="project__description__section-img project__description__section-img__05">
