--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     Web, alongside HTML and JavaScript. </p>
             </div>
 
-            <a href="goetzeiscool.github.io">
+            <a href="https://lazyvegandragon.github.io/CSS-backgrounds/">
                 <button class="rainbow-btn">
                     <span class="rainbow-circle"></span>
                     <span class="rainbow-circle"></span>
@@ -180,7 +180,7 @@
                     your journey into the world of CSS shapes. </p>
             </div>
 
-            <a href="goetzeiscool.github.io">
+            <a href="https://lazyvegandragon.github.io/CSS-shapes/">
                 <button class="rainbow-btn">
                     <span class="rainbow-circle"></span>
                     <span class="rainbow-circle"></span>
@@ -231,7 +231,7 @@
                 </p>
             </div>
 
-            <a href="goetzeiscool.github.io">
+            <a href="https://lazyvegandragon.github.io/presernove-poezije/">
                 <button class="rainbow-btn">
                     <span class="rainbow-circle"></span>
                     <span class="rainbow-circle"></span>
@@ -260,7 +260,7 @@
                 </p>
             </div>
 
-            <a href="goetzeiscool.github.io">
+            <a href="https://lazyvegandragon.github.io/simple-text-manipulation/">
                 <button class="rainbow-btn">
                     <span class="rainbow-circle"></span>
                     <span class="rainbow-circle"></span>
@@ -288,7 +288,7 @@
                     interface. Visit this site and always stay on time.</p>
             </div>
 
-            <a href="goetzeiscool.github.io">
+            <a href="https://lazyvegandragon.github.io/clock/">
                 <button class="rainbow-btn">
                     <span class="rainbow-circle"></span>
                     <span class="rainbow-circle"></span>
@@ -315,16 +315,8 @@
         </div>
     </section>
 
-    <section class="later">
-        IN THE WORKS!
-        <ul>
-            <li><a href="/presernove-poezije/">Prešern's poetry</a></li>
-            <li><a href="/simple-text-manipulation/">Simple Text Manipulation</a></li>
-            <li><a href="/conquering-responsive-layouts/">Conquering Responsive Layouts</a></li>
-            <li><a href="/mozilla/">A biography page inspired by Mozilla</a></li>
-            <li><a href="/clock/">A clock in real time</a></li>
-            <li><a href="/CSS-shapes/">Pure CSS shapes</a></li>
-        </ul>
+    <section id="contactSection" class="later">
+        
     </section>
 
 
