--- a/index.html
+++ b/index.html
@@ -138,10 +138,9 @@
             <div class="background-number no-select">01</div>
             <div class="front-text">
                 <h3> Explore the Art of Web Design with Our CSS Backgrounds Project </h3>
-                <p> Are you a fan of web design? Do you want to explore the power of CSS in creating stunning
-                    backgrounds? If so, you will love our CSS Backgrounds project. This online collection showcases a
-                    variety of backgrounds created using CSS. Each background is presented with its CSS code, allowing
-                    you to understand the techniques used and apply them in your own projects. The collection is
+                <p> Are you a fan of web design? This online collection showcases a variety of backgrounds created using
+                    CSS. Each background is presented with its CSS code, allowing you to understand the techniques used
+                    and apply them in your own projects. The collection is
                     designed to inspire and educate, offering a modern and interactive experience. Visit this site and
                     dive into the world of CSS design. </p>
                 <p> What is CSS? CSS (Cascading Style Sheets) is a style sheet language used for describing the look and
@@ -172,7 +171,7 @@
             <div class="front-text">
                 <h3> Discover the Power of CSS with Our CSS Shapes Project </h3>
                 <p> Do you want to learn how to create different shapes using CSS?</p>
-                <p> Our CSS Shapes project is an online
+                <p> This CSS Shapes project is an online
                     collection of various shapes, all made using CSS. Each shape comes with its CSS code, enabling you
                     to learn and understand how it was created. </p>
                 <p>The project is designed to be both educational and
@@ -206,7 +205,7 @@
                 <p>
                     Do you love poetry? Do you want to learn more about the works of Dr. France Prešeren, the
                     greatest
-                    Slovenian poet? If so, you will love our Prešeren poetry project. This online site is
+                    Slovenian poet? If so, you will love this Prešeren poetry project. This online site is
                     designed as an
                     interactive library of poems, which you can browse by alphabet or category. Each poem is
                     stored in
@@ -217,14 +216,12 @@
                     world of poetry.
                 </p>
                 <p>
-                    Who Was Dr. France Prešeren?
                     Dr. France Prešeren (1800-1849) was a Slovenian poet, lawyer, and cultural icon. He is
                     widely
                     regarded as the national poet of Slovenia and one of the most influential figures in the
                     Slovenian
-                    literary history. He wrote in the Slovenian language, which was not widely recognized or
-                    used at the
-                    time. He is best known for his lyrical poems, sonnets, and ballads, which express his love,
+                    literary history. He is best known for his lyrical poems, sonnets, and ballads, which express his
+                    love,
                     patriotism, and social criticism. He also wrote the lyrics for the Slovenian national
                     anthem,
                     Zdravljica (A Toast).
@@ -253,8 +250,8 @@
             <div class="front-text">
                 <h3> Transform Your Text with Our Text Transformation Tool </h3>
                 <p> Need to transform your text quickly and efficiently? </p>
-                <p>Our Text Transformation Tool is here to help.
-                    This online tool allows you to manipulate your text in various ways, such as changing case,
+                <p>This Text Transformation Tool is here to help.
+                    It allows you to manipulate your text in various ways, such as changing case,
                     reversing text, encoding and decoding, and more. The tool is designed to be user-friendly and
                     efficient, making text transformation a breeze. Visit this site and transform your text in no time.
                 </p>
@@ -280,9 +277,9 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">05</div>
             <div class="front-text">
-                <h3> Keep Track of Time with Our Web Clock Online </h3>
-                <p> Want to have a stylish and accurate clock on your desktop? </p>
-                <p>Our Web Clock Online is the perfect solution. This online clock displays the current time in
+                <h3> Keep Track of Time with Our Web Clock Online (IN THE WORKS!)</h3>
+                <p> Want to have a (not yet) stylish and accurate clock on your desktop? </p>
+                <p>Web Clock Online is the (not yet) perfect solution. This online clock displays the current time in
                     real-time, ensuring you never lose track of
                     time. The clock is designed using modern web technologies, providing a sleek and responsive
                     interface. Visit this site and always stay on time.</p>
@@ -302,6 +299,36 @@
         <div class="project__description__section-img project__description__section-img__05">
             <h3 id="time"></h3>
         </div>
+
+    </section>
+
+    <section id="project__description__section-06" class="project__description__section">
+
+        <div class="project__description__section-text__container">
+            <div class="background-number no-select">06</div>
+            <div class="front-text">
+                <h3> Embark on an Adventure with Our Interactive Text-Based Game (IN THE WORKS!)</h3>
+                <p> Are you ready to dive into a world of choices and consequences? </p>
+                <p> This Interactive Text-Based Game is an online journey where every decision you make shapes the
+                    story. Each choice leads to a different path, enabling you to explore multiple storylines and
+                    outcomes. </p>
+                <p> The game is designed to be both entertaining and thought-provoking, providing a modern and
+                    interactive gaming experience. Visit this site and start your adventure in the world of interactive
+                    storytelling. </p>
+            </div>
+
+            <a href="https://lazyvegandragon.github.io/text-game/">
+                <button class="rainbow-btn">
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <span class="rainbow-circle"></span>
+                    <p class="visit-text">Visit</p>
+                </button>
+            </a>
+
+        </div>
+
+        <div class="project__description__section-img project__description__section-img__06"></div>
 
     </section>
 
@@ -339,7 +366,7 @@
                     <span class="rainbow-circle"></span>
                     <p class="visit-text">Submit</p>
                 </button>
-                
+
             </form>
 
         </div>
