--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                     <h2>Web Clock</h2>
                 </div>
             </article>
+            <article class="project__card project__card-6" onclick="smoothScroll('project__description__section-06')">
+                <div class="project__card__background__image background-img-mockup-06">
+
+                </div>
+                <div class=project__card-title>
+                    <h2>Interactive Text Game</h2>
+                </div>
+            </article>
 
         </div>
     </section>
@@ -137,7 +145,7 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">01</div>
             <div class="front-text">
-                <h3> Explore the Art of Web Design with Our CSS Backgrounds Project </h3>
+                <h3>CSS Backgrounds Project </h3>
                 <p> Are you a fan of web design? This online collection showcases a variety of backgrounds created using
                     CSS. Each background is presented with its CSS code, allowing you to understand the techniques used
                     and apply them in your own projects. The collection is
@@ -169,7 +177,7 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">02</div>
             <div class="front-text">
-                <h3> Discover the Power of CSS with Our CSS Shapes Project </h3>
+                <h3>CSS Shapes Project </h3>
                 <p> Do you want to learn how to create different shapes using CSS?</p>
                 <p> This CSS Shapes project is an online
                     collection of various shapes, all made using CSS. Each shape comes with its CSS code, enabling you
@@ -200,7 +208,7 @@
             <div class="background-number no-select">03</div>
             <div class="front-text">
                 <h3>
-                    Discover the Beauty of Poetry with Our Prešeren Poetry Project
+                    Discover the Beauty of Poetry
                 </h3>
                 <p>
                     Do you love poetry? Do you want to learn more about the works of Dr. France Prešeren, the
@@ -248,8 +256,8 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">04</div>
             <div class="front-text">
-                <h3> Transform Your Text with Our Text Transformation Tool </h3>
-                <p> Need to transform your text quickly and efficiently? </p>
+                <h3>Transform Your Text</h3>
+                <p>Need to transform your text quickly and efficiently? </p>
                 <p>This Text Transformation Tool is here to help.
                     It allows you to manipulate your text in various ways, such as changing case,
                     reversing text, encoding and decoding, and more. The tool is designed to be user-friendly and
@@ -277,7 +285,7 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">05</div>
             <div class="front-text">
-                <h3> Keep Track of Time with Our Web Clock Online (IN THE WORKS!)</h3>
+                <h3>Keep Track of Time (IN THE WORKS!)</h3>
                 <p> Want to have a (not yet) stylish and accurate clock on your desktop? </p>
                 <p>Web Clock Online is the (not yet) perfect solution. This online clock displays the current time in
                     real-time, ensuring you never lose track of
@@ -307,7 +315,7 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">06</div>
             <div class="front-text">
-                <h3> Embark on an Adventure with Our Interactive Text-Based Game (IN THE WORKS!)</h3>
+                <h3> Embark on an Adventure (IN THE WORKS!)</h3>
                 <p> Are you ready to dive into a world of choices and consequences? </p>
                 <p> This Interactive Text-Based Game is an online journey where every decision you make shapes the
                     story. Each choice leads to a different path, enabling you to explore multiple storylines and
