--- a/index.html
+++ b/index.html
@@ -151,9 +151,6 @@
                     and apply them in your own projects. The collection is
                     designed to inspire and educate, offering a modern and interactive experience. Visit this site and
                     dive into the world of CSS design. </p>
-                <p> What is CSS? CSS (Cascading Style Sheets) is a style sheet language used for describing the look and
-                    formatting of a document written in HTML or XML. It is a cornerstone technology of the World Wide
-                    Web, alongside HTML and JavaScript. </p>
             </div>
 
             <a href="https://lazyvegandragon.github.io/CSS-backgrounds/">
@@ -211,9 +208,7 @@
                     Discover the Beauty of Poetry
                 </h3>
                 <p>
-                    Do you love poetry? Do you want to learn more about the works of Dr. France Prešeren, the
-                    greatest
-                    Slovenian poet? If so, you will love this Prešeren poetry project. This online site is
+                    This online site is
                     designed as an
                     interactive library of poems, which you can browse by alphabet or category. Each poem is
                     stored in
@@ -285,7 +280,7 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">05</div>
             <div class="front-text">
-                <h3>Keep Track of Time (IN THE WORKS!)</h3>
+                <h3>Keep Track of Time (WORK IN PROGRESS!!)</h3>
                 <p> Want to have a (not yet) stylish and accurate clock on your desktop? </p>
                 <p>Web Clock Online is the (not yet) perfect solution. This online clock displays the current time in
                     real-time, ensuring you never lose track of
@@ -315,12 +310,12 @@
         <div class="project__description__section-text__container">
             <div class="background-number no-select">06</div>
             <div class="front-text">
-                <h3> Embark on an Adventure (IN THE WORKS!)</h3>
+                <h3> Embark on an Adventure (WORK IN PROGRESS!)</h3>
                 <p> Are you ready to dive into a world of choices and consequences? </p>
                 <p> This Interactive Text-Based Game is an online journey where every decision you make shapes the
                     story. Each choice leads to a different path, enabling you to explore multiple storylines and
                     outcomes. </p>
-                <p> The game is designed to be both entertaining and thought-provoking, providing a modern and
+                <p> The game is designed to be both entertaining and thought-provoking, providing an
                     interactive gaming experience. Visit this site and start your adventure in the world of interactive
                     storytelling. </p>
             </div>
